--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-themed">
-    <a class="navbar-brand" href="{{ site.baseurl }}/"><h5><b>{{ site.title }}</b></h5></a>
+  <a class="navbar-brand" href="{{ site.baseurl }}/">
+    <div class="logo-container">
+      <img src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ site.title }}" class="spinning-logo">
+    </div>
+  </a>
   
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-1x fa-bars text-themed"></i>
