renamed theme css

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,9 @@
 ---
 ---
 /* Theme variables */
-@import "theme_variable";
 
-
+@import "themes";
+/* Import Project Flow */
 @import "project_flow";
 
 /* Import the external theme */
