added resume page and removed duplicates

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,17 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container">
-    <a class="navbar-brand" href="{{ site.baseurl }}/"><h5>{{ site.title }}</h5></a>
+<nav class="navbar navbar-expand-lg navbar-themed">
+  <a class="navbar-brand" href="{{ site.baseurl }}/">
+    <div class="logo-container">
+      <img src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ site.title }}" class="spinning-logo">
+    </div>
+  </a>
+  
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <i class="fas fa-1x fa-bars text-themed"></i>
     </button>
+  
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        {%- assign html_pages = site.pages | sort: 'weight' -%}
+  
+        {%- assign html_pages = site.html_pages | sort: 'weight' -%}
         {%- assign filtered_pages = "" | split: "" -%}
-
+  
         {%- for html_page in html_pages -%} 
           {%- assign exclude = false -%}
-
+  
           {%- for exclude_path in site.nav_exclude -%}
             {%- if exclude_path == html_page.path -%}
               {%- assign exclude = true -%}
@@ -24,27 +30,31 @@
               {%- endif -%}
             {%- endif -%}
           {%- endfor -%}
-
+  
           {%- unless exclude -%}
-            {%- if html_page.weight -%}
+            {%- if html_page.title -%}
               {%- assign filtered_pages = filtered_pages | push: html_page -%}
             {%- endif -%}
           {%- endunless -%}
         {%- endfor -%}
-
-        {% for html_page in filtered_pages %}
-          {%- if html_page.external_url -%}
-            <a class="nav-item nav-link" href="{{ html_page.external_url }}" target="_blank">{{ html_page.title }}</a>
+  
+        {% for html_page in filtered_pages %}  
+          {%- if page.url contains html_page.url -%}
+            {%- assign active_status = "active" -%}
           {%- else -%}
-            <a class="nav-item nav-link {% if page.url == html_page.url %}active{% endif %}" href="{{ html_page.url | relative_url }}">{{ html_page.title }}</a>
+            {%- assign active_status = "" -%}
           {%- endif -%}
+  
+          {%- if html_page.external_url -%}
+            {%- assign url = html_page.external_url -%}
+          {%- else -%}
+            {%- assign url = html_page.url | relative_url -%}
+          {%- endif -%}
+  
+          <a class="nav-item nav-link {{ active_status }}" href="{{ url }}" {%- if html_page.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ html_page.title }}</a>
         {% endfor %}
-
-        <a class="nav-item nav-link" href="{{ site.github }}" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
+  
         <span id="theme-toggler" class="nav-item nav-link" role="button" onclick="toggleTheme()"></span>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
