--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -26,3 +26,11 @@
     border: none;
     display: block;
 }
+
+#adobe-dc-view {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  border-radius: 8px;
+}
